--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 bricc:
     config:
         startTime:
-            hour: 7
+            hours: 7
             minutes: 30
         numHours: 16
 
         specialTimings:
             - date: 10-20-2022
               startTime:
-                  hour: 9
+                  hours: 9
                   minutes: 0
               numHours: 5
 
             - date: 10-21-2022
               startTime:
-                  hour: 10
+                  hours: 10
                   minutes: 0
               numHours: 7
 
